[package]
name = "_72hours"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
cassandra-cpp = "1.2.0"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4"] }
serde = "1.0.152"
# serde_json = "1.0.93"
rust_socketio = "0.4.1"

