[package]
name = "_72hours"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
rust_socketio = "0.4.1"
reqwest = { version = "0.11.14", features = ["json"] }
cassandra-cpp = "1.2.0"
serde = "1.0.152"
rand = "0.8.5"

